# CML_sample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp_wrapper/: Makefile  MotionSystemWrapper.cpp  README.md  TestJNI.java  com_cml_wrapper_MotionSystemWrapper.h
cpp_wrapper/com/cml/wrapper/: MotionSystemWrapper.java
include/: cml.h
spring-motion-api/: .dockerignore  Dockerfile  README  pom.xml
spring-motion-api/src/main/java/com/example/motion/: MotionApiApplication.java  MotionControllerApi.java  MotionControllerService.java
src/: CalibrationManager.cpp  CalibrationManager.h  Logger.cpp  Logger.h  MotionController.cpp  MotionController.h  SafetyMonitor.cpp  SafetyMonitor.h  TriggerHandler.cpp  TriggerHandler.h
tests/: main.cpp  test_CalibrationManager.cpp  test_Logger.cpp  test_MotionController.cpp  test_SafetyMonitor.cpp  test_TriggerHandler.cpp
